align right character count of text field; add char limits to others textfields; add 10mb limit for portfolio uploads; fix portfolio images layout; add light popup for portfolio images; add limits to project attachments;

--- a/sources/dronesapp-web/angular/src/app/components/forms/f-bid/f-bid.component.styl
+++ b/sources/dronesapp-web/angular/src/app/components/forms/f-bid/f-bid.component.styl
@@ -100,5 +100,9 @@
     font-size 1.8rem
     letter-spacing: 0.2em
 
-
-
+  .f-default
+    &__text
+      &._light
+        display block
+        margin-right 0
+        text-align right
